Tue Oct 28 09:21:29 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_check_version): Move docs inline,
	rewrite docs, mention memory management for the return
	value. (Partly addresses #125549, Michael Natterer)

2003-10-28  Padraig O'Briain  <padraig.obriain@sun.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_remove_filter):
	Changew index to filter_index to fix compilation error.

	* gtk/gtkfilesystem.h: Correct definition of gtk_file_path_get_string.

Mon Oct 27 15:47:58 2003  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkscreen-x11.c: #include <X11/extensions/Xrandr.h> if
	we have RandR support, for XRRUpdateConfiguration declaration.

	* gtk/gtkfilefilter.c: #include "gtkprivate.h" for _gtk_fnmatch
	declaration.

	* gtk/gtkuimanager.c (gtk_ui_manager_add_ui_from_file): Make
	length a gsize variable, since that's what g_file_get_contents()
	expects.

Mon Oct 27 12:18:49 2003  Owen Taylor  <otaylor@redhat.com>

	* NEWS: Fix attribution for above/below EWMH work.

Sat Oct 25 23:30:13 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.c (gtk_action_group_class_init): Add "name" 
	as a construct-only property.  (#125475, Murray Cumming)

Thu Oct 23 21:55:10 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	Fix bug 116297 and 125472
	
	* gtk/gtktoolbar.c (gtk_toolbar_highlight_drop_location): Make
	this function take an index and a GtkToolItem.

	* tests/testtoolbar.c (main): Make "Show Arrow" default to
	true. Make one of the separators !draw and expand.
	Update for new highlight_drop_location() API.

	* gtk/gtktoolitem.[ch]: Remove "pack_end" property

	* gtk/gtktoolbar.h: Formatting fixes.

	* gtk/gtktoolbar.c: Remove "pack_end" child property. Allow
	separator tool items to expand.
	(logical_to_physical, physical_to_logical): Fix off-by-one errors
	(Fix #125472, Marco Pesenti Gritti)

	* gtk/gtkseparatortoolitem.[ch]: Add new "draw" property.
	(gtk_separator_tool_item_expose) only draw if "draw" is TRUE. Also